--- a/.github/workflows/upload-store-android-app.yml
+++ b/.github/workflows/upload-store-android-app.yml
@@ -42,7 +42,7 @@ env:
   ANDROID_PACKAGE_NAME: ${{ inputs.ANDROID_PACKAGE_NAME }}
   FLAVOR: ${{ inputs.FLAVOR }}
   ANDROID_ENABLE_UPLOAD: ${{ inputs.ANDROID_ENABLE_UPLOAD }}
-  ANDROID_BUILD_PATH: build/app/outputs/bundle/${{ inputs.FLAVOR }}Release/app-${{ inputs.FLAVOR }}-release.aab
+  ANDROID_BUILD_PATH: app-${{ inputs.FLAVOR }}-release.aab
   
 jobs:
   upload:
