--- a/.github/workflows/build-android-app.yml
+++ b/.github/workflows/build-android-app.yml
@@ -3,6 +3,9 @@ name: Build Android app
 on:
   workflow_call:
     inputs:
+      FLUTTER_VERSION:
+        required: true
+        type: string
       ANDROID_TRACK:
         required: true
         type: string
@@ -34,6 +37,7 @@ on:
         required: true
 
 env:
+  FLUTTER_VERSION: ${{ inputs.FLUTTER_VERSION }}
   ANDROID_TRACK: ${{ inputs.ANDROID_TRACK }}
   ANDROID_RELEASE_STATUS: ${{ inputs.ANDROID_RELEASE_STATUS }}
   ANDROID_PACKAGE_NAME: ${{ inputs.ANDROID_PACKAGE_NAME }}
@@ -43,26 +47,16 @@ env:
 jobs:
   build:
     name: Build Android app
-#    runs-on: ubuntu-latest
-    runs-on: [self-hosted, macOS, ARM64, mr-mac]
+    runs-on: [self-hosted, macOS, X64, mobile-1]
     defaults:
       run:
         working-directory: android
     steps:
       - uses: actions/checkout@v4
-#      - uses: actions/setup-java@v4
-#        with:
-#          distribution: 'zulu'
-#          java-version: '17'
-#      - name: Setup Android SDK
-#        uses: android-actions/setup-android@v3
-#      - name: Gradle Build Action
-#        uses: gradle/gradle-build-action@v3.1.0
-#      - uses: subosito/flutter-action@v2
-#        with:
-#          flutter-version: '3.16.8'
-#          channel: 'stable'
-#          cache: true
+      - name: Setup Flutter version
+        run: |
+          fvm install ${{ inputs.FLUTTER_VERSION }}
+          fvm use ${{ inputs.FLUTTER_VERSION }}
       - name: Prepare Android json service account
         run: echo "${{ secrets.JSON_PLAY_STORE_API_KEY }}" | base64 --decode > api_key.json
       - name: Prepare Android keystore
@@ -75,7 +69,7 @@ jobs:
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> key/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> key/key.properties
       - name: Install Dependencies
-        run: flutter pub get
+        run: fvm flutter pub get
       - name: Check app and set version
         run: fastlane versioning
 #        env:
@@ -83,10 +77,6 @@ jobs:
 #          ANDROID_VERSION_CODE: 1
       - name: Build appbundle
         run: fastlane build
-#      - name: Upload Artifact to Play Store with Fastlane
-#        run: fastlane deploy
-#        env:
-#          ANDROID_ENABLE_UPLOAD: ${{ inputs.ANDROID_ENABLE_UPLOAD }}
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
