--- a/.github/workflows/build-ios-app.yml
+++ b/.github/workflows/build-ios-app.yml
@@ -41,8 +41,7 @@ env:
 jobs:
   build:
     name: Build iOS
-    #runs-on: macos-13
-    runs-on: [self-hosted, macOS, ARM64, mr-mac]
+    runs-on: [self-hosted, macOS, X64, mobile-1]
     defaults:
       run:
         working-directory: ios
