--- a/.github/workflows/build-android-app.yml
+++ b/.github/workflows/build-android-app.yml
@@ -47,7 +47,8 @@ env:
 jobs:
   build:
     name: Build Android app
-    runs-on: [self-hosted, macOS, X64, mobile-1]
+    runs-on:
+      group: crispy-self-hosted-runners
     defaults:
       run:
         working-directory: android
