--- a/.github/workflows/build-ios-app.yml
+++ b/.github/workflows/build-ios-app.yml
@@ -83,7 +83,7 @@ jobs:
           # security list-keychain -d user -s $KEYCHAIN_PATH
           security list-keychains -s $KEYCHAIN_PATH
           security default-keychain -s $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD"" $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
           # apply provisioning profile
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
