feat: added bitwarden secrets instead vault secrets

--- a/.github/workflows/build-image-on-ecr-with-vault.yml
+++ b/.github/workflows/build-image-on-ecr-with-vault.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Get Secrets
       uses: bitwarden/sm-action@v1
       with:
-        access_token: ${{ secrets.BW_ACCESS_TOKEN }}
+        access_token: ${{ secrets.BITWARDEN_ACCESS_TOKEN }}
         secrets: |
           7919e36e-77c2-4e0c-a036-b13b00a77325 > AWS_ACCESS_KEY_ID
           cc90fc89-fdfa-43a3-8169-b13b00a79638 > AWS_SECRET_ACCESS_KEY
